fix: layout of paging on mobile

--- a/scss/components/_paging.scss
+++ b/scss/components/_paging.scss
@@ -69,6 +69,8 @@
         padding: 20px 20px 0;
         position: relative;
         display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
 
         @include media-tablet-portrait() {
             border: none;
@@ -76,18 +78,25 @@
             padding: 0;
             text-align: right;
             flex: auto;
+            justify-content: flex-end;
         }
 
         &-results {
-            margin-right: 20px;
-            flex: 1 0 auto;
             @include ellipsis();
             @include type(small, $line-height: $field-small-height);
 
+            flex: 1 0 auto;
+            text-align: center;
+            width: 100%;
+
             @include media-tablet-portrait() {
                 display: inline-block;
+                margin-right: 20px;
                 vertical-align: middle;
                 flex: auto;
+                overflow: hidden;
+                text-align: right;
+                width: fit-content;
             }
         }
 
